---
source: crates/utils/src/wasm_tools.rs
assertion_line: 1131
expression: exports
---
{
  "testing:http-workflow-obelisk-ext/workflow.get-await-next": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-await-next",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<string, string>, variant { all-processed, function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }) }>",
        "wit_type": "result<result<string, string>, await-next-extension-error>"
      }
    },
    "extension": "await_next",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-get": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-get",
    "parameter_types": [
      {
        "type_wrapper": "record { id: string }",
        "name": "execution-id",
        "wit_type": "execution-id"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<string, string>, variant { function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }), not-found-in-processed-responses }>",
        "wit_type": "result<result<string, string>, get-extension-error>"
      }
    },
    "extension": "get",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-resp-await-next": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-resp-await-next",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<string, string>, variant { all-processed, function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }) }>",
        "wit_type": "result<result<string, string>, await-next-extension-error>"
      }
    },
    "extension": "await_next",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-resp-get": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-resp-get",
    "parameter_types": [
      {
        "type_wrapper": "record { id: string }",
        "name": "execution-id",
        "wit_type": "execution-id"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<string, string>, variant { function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }), not-found-in-processed-responses }>",
        "wit_type": "result<result<string, string>, get-extension-error>"
      }
    },
    "extension": "get",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-resp-submit": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-resp-submit",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      },
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "submit",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-submit": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-submit",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      },
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "submit",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-successful-await-next": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-successful-await-next",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<string, string>, variant { all-processed, function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }) }>",
        "wit_type": "result<result<string, string>, await-next-extension-error>"
      }
    },
    "extension": "await_next",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-await-next": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-await-next",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<list<string>, string>, variant { all-processed, function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }) }>",
        "wit_type": "result<result<list<string>, string>, await-next-extension-error>"
      }
    },
    "extension": "await_next",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-get": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-get",
    "parameter_types": [
      {
        "type_wrapper": "record { id: string }",
        "name": "execution-id",
        "wit_type": "execution-id"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<list<string>, string>, variant { function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }), not-found-in-processed-responses }>",
        "wit_type": "result<result<list<string>, string>, get-extension-error>"
      }
    },
    "extension": "get",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-stress-await-next": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-stress-await-next",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<list<string>, string>, variant { all-processed, function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }) }>",
        "wit_type": "result<result<list<string>, string>, await-next-extension-error>"
      }
    },
    "extension": "await_next",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-stress-get": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-stress-get",
    "parameter_types": [
      {
        "type_wrapper": "record { id: string }",
        "name": "execution-id",
        "wit_type": "execution-id"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<list<string>, string>, variant { function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }), not-found-in-processed-responses }>",
        "wit_type": "result<result<list<string>, string>, get-extension-error>"
      }
    },
    "extension": "get",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-stress-submit": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-stress-submit",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      },
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      },
      {
        "type_wrapper": "u32",
        "name": "concurrency",
        "wit_type": "u32"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "submit",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-submit": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-successful-concurrently-submit",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      },
      {
        "type_wrapper": "list<string>",
        "name": "urls",
        "wit_type": "list<string>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "submit",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-successful-get": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-successful-get",
    "parameter_types": [
      {
        "type_wrapper": "record { id: string }",
        "name": "execution-id",
        "wit_type": "execution-id"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<string, string>, variant { function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }), not-found-in-processed-responses }>",
        "wit_type": "result<result<string, string>, get-extension-error>"
      }
    },
    "extension": "get",
    "submittable": false
  },
  "testing:http-workflow-obelisk-ext/workflow.get-successful-submit": {
    "ffqn": "testing:http-workflow-obelisk-ext/workflow.get-successful-submit",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      },
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "submit",
    "submittable": false
  },
  "testing:http-workflow-obelisk-schedule/workflow.get-resp-schedule": {
    "ffqn": "testing:http-workflow-obelisk-schedule/workflow.get-resp-schedule",
    "parameter_types": [
      {
        "type_wrapper": "variant { now, at(record { seconds: u64, nanoseconds: u32 }), in(variant { milliseconds(u64), seconds(u64), minutes(u32), hours(u32), days(u32) }) }",
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "schedule",
    "submittable": true
  },
  "testing:http-workflow-obelisk-schedule/workflow.get-schedule": {
    "ffqn": "testing:http-workflow-obelisk-schedule/workflow.get-schedule",
    "parameter_types": [
      {
        "type_wrapper": "variant { now, at(record { seconds: u64, nanoseconds: u32 }), in(variant { milliseconds(u64), seconds(u64), minutes(u32), hours(u32), days(u32) }) }",
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "schedule",
    "submittable": true
  },
  "testing:http-workflow-obelisk-schedule/workflow.get-successful-concurrently-schedule": {
    "ffqn": "testing:http-workflow-obelisk-schedule/workflow.get-successful-concurrently-schedule",
    "parameter_types": [
      {
        "type_wrapper": "variant { now, at(record { seconds: u64, nanoseconds: u32 }), in(variant { milliseconds(u64), seconds(u64), minutes(u32), hours(u32), days(u32) }) }",
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "list<string>",
        "name": "urls",
        "wit_type": "list<string>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "schedule",
    "submittable": true
  },
  "testing:http-workflow-obelisk-schedule/workflow.get-successful-concurrently-stress-schedule": {
    "ffqn": "testing:http-workflow-obelisk-schedule/workflow.get-successful-concurrently-stress-schedule",
    "parameter_types": [
      {
        "type_wrapper": "variant { now, at(record { seconds: u64, nanoseconds: u32 }), in(variant { milliseconds(u64), seconds(u64), minutes(u32), hours(u32), days(u32) }) }",
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      },
      {
        "type_wrapper": "u32",
        "name": "concurrency",
        "wit_type": "u32"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "schedule",
    "submittable": true
  },
  "testing:http-workflow-obelisk-schedule/workflow.get-successful-schedule": {
    "ffqn": "testing:http-workflow-obelisk-schedule/workflow.get-successful-schedule",
    "parameter_types": [
      {
        "type_wrapper": "variant { now, at(record { seconds: u64, nanoseconds: u32 }), in(variant { milliseconds(u64), seconds(u64), minutes(u32), hours(u32), days(u32) }) }",
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": "schedule",
    "submittable": true
  },
  "testing:http-workflow/workflow.get": {
    "ffqn": "testing:http-workflow/workflow.get",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "string",
          "err": "string"
        },
        "wit_type": "result<string, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:http-workflow/workflow.get-resp": {
    "ffqn": "testing:http-workflow/workflow.get-resp",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "string",
          "err": "string"
        },
        "wit_type": "result<string, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:http-workflow/workflow.get-successful": {
    "ffqn": "testing:http-workflow/workflow.get-successful",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "string",
          "err": "string"
        },
        "wit_type": "result<string, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:http-workflow/workflow.get-successful-concurrently": {
    "ffqn": "testing:http-workflow/workflow.get-successful-concurrently",
    "parameter_types": [
      {
        "type_wrapper": "list<string>",
        "name": "urls",
        "wit_type": "list<string>"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "list<string>",
          "err": "string"
        },
        "wit_type": "result<list<string>, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:http-workflow/workflow.get-successful-concurrently-stress": {
    "ffqn": "testing:http-workflow/workflow.get-successful-concurrently-stress",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      },
      {
        "type_wrapper": "u32",
        "name": "concurrency",
        "wit_type": "u32"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "list<string>",
          "err": "string"
        },
        "wit_type": "result<list<string>, string>"
      }
    },
    "extension": null,
    "submittable": true
  }
}
